[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/UI/frame.png" type="Texture" id=1]
[ext_resource path="res://Textures/UI/lost.png" type="Texture" id=2]
[ext_resource path="res://Textures/UI/health.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/lostPressed.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/found.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/foundPressed.png" type="Texture" id=6]
[ext_resource path="res://Fonts/roberto_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://Scenes/MonsterCreator.tscn" type="PackedScene" id=9]

[sub_resource type="Theme" id=1]

[node name="Node2D" type="Node2D"]
visible = false
script = ExtResource( 8 )

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="Monster" parent="UI_Layer" instance=ExtResource( 9 )]
visible = false
position = Vector2( 79.3125, 114.725 )
scale = Vector2( 5, 5 )
z_index = 1

[node name="frame" type="Sprite" parent="UI_Layer"]
position = Vector2( 189.79, 363.742 )
scale = Vector2( 0.62913, 0.587362 )
texture = ExtResource( 1 )

[node name="health" type="Sprite" parent="UI_Layer"]
visible = false
position = Vector2( 78.7295, 72.8873 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="health2" type="Sprite" parent="UI_Layer"]
visible = false
position = Vector2( 112.64, 72.288 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="health3" type="Sprite" parent="UI_Layer"]
visible = false
position = Vector2( 153.227, 72.6667 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="ColourBar" type="ColorRect" parent="UI_Layer"]
visible = false
margin_left = 70.0
margin_top = 97.0
margin_right = 303.0
margin_bottom = 115.0
color = Color( 0.952941, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Found" type="TextureButton" parent="UI_Layer"]
margin_left = 173.819
margin_top = 589.92
margin_right = 392.819
margin_bottom = 679.92
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lost" type="TextureButton" parent="UI_Layer"]
margin_left = 40.6122
margin_top = 591.224
margin_right = 210.612
margin_bottom = 681.224
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step1" type="ColorRect" parent="UI_Layer"]
visible = false
anchor_right = -8.47711e-08
margin_left = 44.1343
margin_top = 17.704
margin_right = 349.134
margin_bottom = 47.704
rect_pivot_offset = Vector2( 135.063, 312.965 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartsInfo" type="Label" parent="UI_Layer/Step1"]
modulate = Color( 0.0470588, 0.00392157, 0.00392157, 1 )
margin_left = 4.0
margin_top = 5.0
margin_right = 294.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 7 )
text = "The hearts indicate how many lives you have left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step2" type="ColorRect" parent="UI_Layer"]
visible = false
anchor_left = -0.00138889
anchor_right = -0.00138889
margin_left = 59.5
margin_top = 130.0
margin_right = 360.5
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBarInfo" type="Label" parent="UI_Layer/Step2"]
margin_left = 1.0
margin_right = 295.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0117647, 0, 0, 1 )
text = "This color (in this case red) indicates color of monsters that are found"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step3" type="ColorRect" parent="UI_Layer"]
visible = false
margin_left = 29.0
margin_top = 458.0
margin_right = 324.0
margin_bottom = 518.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LosingLivesInfo" type="Label" parent="UI_Layer/Step3"]
margin_left = 6.47876
margin_top = 3.0
margin_right = 288.479
margin_bottom = 60.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0901961, 0.00392157, 0.00392157, 1 )
text = "Swiping Lost on a monster that should be \"found\" loses you a life. You also lose a life if you swipe \"lost\" on a found monster"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step4" type="ColorRect" parent="UI_Layer"]
visible = false
margin_left = 112.0
margin_top = 531.0
margin_right = 359.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarInfo" type="Label" parent="UI_Layer/Step4"]
margin_left = -2.0
margin_top = 1.0
margin_right = 254.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This bar indicates how much time you have left
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step5" type="ColorRect" parent="UI_Layer"]
visible = false
margin_left = 17.0
margin_top = 572.0
margin_right = 167.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LostInfo" type="Label" parent="UI_Layer/Step5"]
anchor_left = 0.003455
anchor_right = 0.00345492
margin_left = 0.454162
margin_top = -1.00549
margin_right = 154.454
margin_bottom = 30.9945
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Swipe left or tap lost on monsters that don't contain the right color"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step6" type="ColorRect" parent="UI_Layer"]
visible = false
margin_left = 172.0
margin_top = 571.0
margin_right = 364.0
margin_bottom = 605.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoundInfo" type="Label" parent="UI_Layer/Step6"]
anchor_top = 0.0131579
anchor_bottom = 0.0131579
margin_left = 2.0
margin_top = -1.44737
margin_right = 194.0
margin_bottom = 35.5526
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "If the monster shown matches the color swipe right or press found"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="UI_Layer"]
margin_left = 116.76
margin_top = 666.707
margin_right = 257.76
margin_bottom = 697.707
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI_Layer/NextButton" to="." method="_on_NextButton_pressed"]
